--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 /* Uncomment these 3 lines to see borders around everything */
 // * {
 //  border: 1px solid red;
-//  }
+// }
 @font-face {
   font-family: 'KievitWeb';
   src: url('../fonts/KievitWeb.eot'); /* IE9 Compat Modes */
@@ -117,6 +117,11 @@ h2 {
   background-color: #C0D6DF; 
   min-height: 6.8em;
 }
+.header {
+  margin-top: -8px;
+  padding-top: 8px;
+  background-color: #FFFFFF; 
+}
 .header-logo-left {
   margin: 0;
   color: #00778a;
@@ -132,10 +137,6 @@ h2 {
 }
 .header-logo-right {
   margin: 0;
-  color: #000;
-  font-size: 0.75em;
-  font-weight: 700;
-  text-transform: uppercase;
   text-align: left;
 }
 @media (min-width: 32em) {
